--- a/#1000. A+B Problem.md
+++ b/#1000. A+B Problem.md
@@ -14,7 +14,8 @@
 ### Hint
 Q: Where are the input and the output? A: Your program shall always read input from stdin (Standard Input) and write output to stdout (Standard Output). For example, you can use 'scanf' in C or 'cin' in C++ to read from stdin, and use 'printf' in C or 'cout' in C++ to write to stdout. You shall not output any extra data to standard output other than that required by the problem, otherwise you will get a "Wrong Answer". User programs are not allowed to open and read from/write to files. You will get a "Runtime Error" or a "Wrong Answer" if you try to do so. Here is a sample solution for problem 1000 using C++/G++:
 
-#include 
+```cpp
+#include <iostream>
 using namespace std;
 int  main()
 {
@@ -23,9 +24,11 @@ int  main()
     cout << a+b << endl;
     return 0;
 }
+```
 It's important that the return type of main() must be int when you use G++/GCC,or you may get compile error. Here is a sample solution for problem 1000 using C/GCC:
 
-#include 
+```c
+#include <cstdio>
 
 int main()
 {
@@ -34,8 +37,10 @@ int main()
     printf("%d\n",a+b);
     return 0;
 }
+```
 Here is a sample solution for problem 1000 using PASCAL:
 
+```PASCAL
 program p1000(Input,Output); 
 var 
   a,b:Integer; 
@@ -43,8 +48,10 @@ begin
    Readln(a,b); 
    Writeln(a+b); 
 end.
+```
 Here is a sample solution for problem 1000 using JAVA: Now java compiler is jdk 1.5, next is program for 1000
 
+```java
 import java.io.*;
 import java.util.*;
 public class Main
@@ -76,4 +83,5 @@ public class Main
         System.out.println(a+b);
     }
 }
+```
 ### Source
